--- a/app/src/main/res/layout/watchnotification.xml
+++ b/app/src/main/res/layout/watchnotification.xml
@@ -3,6 +3,15 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+    <Button
+        android:id="@+id/button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="8dp"
+        android:text="@string/launch_activity"/>
+
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
