--- a/app/src/main/res/layout/device_listing_row.xml
+++ b/app/src/main/res/layout/device_listing_row.xml
@@ -5,20 +5,20 @@
     android:clickable="true">
 
     <Button
-        android:id="@+id/btn_delete"
+        android:id="@+id/btn_disconnect"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_marginRight="5dp"
-        android:text="Delete" />
+        android:text="@string/disconnect_device" />
 
     <TextView
         android:id="@+id/textView_deviceIP"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
-        android:layout_toLeftOf="@id/btn_delete"
-        android:layout_alignTop="@id/btn_delete"
+        android:layout_toLeftOf="@id/btn_disconnect"
+        android:layout_alignTop="@id/btn_disconnect"
         android:paddingLeft="8dp"
         android:text="IP Adress"
         android:textSize="18sp"
@@ -29,7 +29,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
-        android:layout_toLeftOf="@id/btn_delete"
+        android:layout_toLeftOf="@id/btn_disconnect"
         android:layout_below="@+id/textView_deviceIP"
         android:paddingLeft="8dp"
         android:text="Port"
