Add Connection Status of the device

--- a/app/src/main/res/layout/device_listing_row.xml
+++ b/app/src/main/res/layout/device_listing_row.xml
@@ -36,6 +36,15 @@
                 android:text="Port"
                 android:textSize="16sp"/>
 
+            <TextView
+                android:id="@+id/textView_ConnectionState"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:layout_below="@+id/textView_devicePort"
+                android:paddingLeft="8dp"
+                android:textSize="16sp"/>
+
 
         </LinearLayout>
 
