--- a/app/src/main/res/layout/activity_configuration.xml
+++ b/app/src/main/res/layout/activity_configuration.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="15dp"
-    tools:context="project.androidcompanion.ConfigurationActivity">
+    tools:context="project.androidcompanion.androidcompanion.device.ConfigurationActivity">
 
     <LinearLayout
         android:layout_width="fill_parent"
