--- a/app/src/main/res/layout/device_listing_row.xml
+++ b/app/src/main/res/layout/device_listing_row.xml
@@ -59,6 +59,14 @@
                 android:layout_height="wrap_content"
                 android:layout_marginRight="5dp"
                 android:text="@string/device_settings" />
+
+            <Button
+                android:id="@+id/btn_device_remove"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="5dp"
+                android:text="@string/device_remove" />
+
         </LinearLayout>
 
 
