--- a/app/src/main/res/layout/activity_device_listing.xml
+++ b/app/src/main/res/layout/activity_device_listing.xml
@@ -26,7 +26,7 @@
         android:tint="@android:color/white"
         />
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:orientation="vertical"
@@ -41,9 +41,15 @@
             android:id="@+id/list"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginTop="16dp"
             android:drawSelectorOnTop="false" />
-    </LinearLayout>
+
+        <TextView android:id="@+id/empty"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="No devices"
+            android:gravity="center"/>
+
+    </RelativeLayout>
 
 
 </android.support.design.widget.CoordinatorLayout>
