--- a/app/src/main/res/layout/device_listing_row.xml
+++ b/app/src/main/res/layout/device_listing_row.xml
@@ -6,77 +6,87 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="75dp"
         android:orientation="horizontal"
-        >
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true">
 
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
+            android:gravity="right"
             android:orientation="vertical"
-            >
+            android:layout_alignParentRight="true"
+            android:layout_toEndOf="@+id/linearLayout">
+
+            <ImageButton
+                android:id="@+id/btn_disconnect"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_marginRight="5dp"
+                android:src="@drawable/ic_phonelink_black_24dp"
+                android:text="@string/disconnect_device"
+                android:layout_toLeftOf="@+id/btn_device_settings"
+                android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true"
+                android:background="@null"
+                android:paddingRight="10dp"
+                android:paddingLeft="10dp"/>
+
+            <ImageButton
+                android:id="@+id/btn_device_settings"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_marginRight="5dp"
+                android:src="@drawable/ic_settings_black_24dp"
+                android:layout_toLeftOf="@+id/btn_device_remove"
+                android:layout_centerVertical="true"
+                android:background="@null"
+                android:paddingRight="10dp"
+                android:paddingLeft="10dp"/>
+
+            <ImageButton
+                android:id="@+id/btn_device_remove"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_marginRight="5dp"
+                android:src="@drawable/ic_delete_black_24dp"
+                android:layout_centerVertical="true"
+                android:layout_alignParentEnd="true"
+                android:background="@null"
+                android:paddingRight="10dp"
+                android:paddingLeft="10dp"/>
+
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:id="@+id/linearLayout">
 
             <TextView
                 android:id="@+id/textView_deviceIP"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentStart="true"
                 android:paddingLeft="8dp"
                 android:text="IP Address"
                 android:textSize="18sp"
-                android:textStyle="bold" />
-
-            <TextView
-                android:id="@+id/textView_devicePort"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentStart="true"
-                android:layout_below="@+id/textView_deviceIP"
-                android:paddingLeft="8dp"
-                android:text="Port"
-                android:textSize="16sp"/>
+                android:textStyle="bold"
+                android:layout_centerVertical="true"
+                android:layout_alignParentStart="true" />
 
             <TextView
                 android:id="@+id/textView_ConnectionState"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
-                android:layout_below="@+id/textView_devicePort"
+                android:layout_below="@+id/textView_deviceIP"
                 android:paddingLeft="8dp"
                 android:textSize="16sp"/>
 
 
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_alignParentEnd="true"
-            >
-
-            <Button
-                android:id="@+id/btn_disconnect"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginRight="5dp"
-                android:text="@string/disconnect_device" />
-
-            <Button
-                android:id="@+id/btn_device_settings"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginRight="5dp"
-                android:text="@string/device_settings" />
-
-            <Button
-                android:id="@+id/btn_device_remove"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginRight="5dp"
-                android:text="@string/device_remove" />
-
-        </LinearLayout>
+        </RelativeLayout>
 
 
     </RelativeLayout>
